# pyelectro

./: .gitignore  .travis.yml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
doc/: Makefile  conf.py  index.rst  make.bat  pyelectro.rst
doc/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pyelectro.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyelectro.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/pyelectro/: analysis.html
doc/_build/html/_sources/: index.txt  modules.txt  pyelectro.txt
examples/: README.md
pyelectro/: __init__.py  analysis.py  io.py  utils.py
test/: README  README.md  test_analysis.py
