[metadata]
name = pyelectro
version = 0.2.6
author = Michael Vella, Padraig Gleeson
author_email = mv333@cam.ac.uk, p.gleeson@gmail.com
url = https://github.com/NeuralEnsemble/pyelectro
license = BSD-2-clause
description = A Python library for analysis of electrophysiological data
long_description = file: README.md, LICENSE
classifiers=
    License :: OSI Approved :: BSD License
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
install_requires =
    numpy
    scipy
    matplotlib

packages = find:

[options.packages.find]
where = .
include = pyelectro*

[options.extras_require]
dev =
    pytest
    pytest-cov

[flake8]
# ignore:
# spacing around operators, comment blocks, in argument lists
# lines too long
ignore = E501,E502,F403,F405,E231,E228,E225,E226,E265,E261
exclude =
    doc,
    build

[mypy]
exclude =
    doc,
    build
